fix: hide scrollbars on capturing (#7867)

--- a/src/renderer/src/assets/styles/scrollbar.scss
+++ b/src/renderer/src/assets/styles/scrollbar.scss
@@ -49,3 +49,11 @@ pre:not(.shiki)::-webkit-scrollbar-thumb {
   --color-scrollbar-thumb: var(--color-scrollbar-thumb-light);
   --color-scrollbar-thumb-hover: var(--color-scrollbar-thumb-light-hover);
 }
+
+/* 用于截图时隐藏滚动条
+ * FIXME: 临时方案，因为 html-to-image 没有正确处理伪元素。
+ */
+.hide-scrollbar,
+.hide-scrollbar * {
+  scrollbar-width: none !important;
+}
